Add MessageReceivedPredicates